tests/error/poly_errors/right_to_left.err
Error: Cannot infer type (at $FILE:22:8)
   | 
20 | @guppy(module)
21 | def main() -> None:
22 |     bar(foo(), 42)
   |         ^^^^^ Cannot infer type variables in expression of type `?T`

Guppy compilation failed due to 1 previous error
